--- a/app/src/main/res/layout/activity_create_bdate.xml
+++ b/app/src/main/res/layout/activity_create_bdate.xml
@@ -107,6 +107,7 @@
             android:layout_centerInParent="true"
             android:layout_margin="5dp"
             android:autoSizeTextType="uniform"
+            android:focusable="false"
             android:textAlignment="center"
             android:textColor="@color/colorPrimaryDark"
             android:textColorHint="@color/colorGray"
