--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,6 +5,14 @@
     android:layout_height="match_parent"
     tools:context=".LoginActivity"
     android:background="@drawable/lgbackground">
+    <ProgressBar
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_centerInParent="true"
+        android:visibility="invisible"
+        android:id="@+id/logPrograssBar"
+
+        />
 
     <ImageView
         android:src="@drawable/loginimage"
