--- a/app/src/main/res/layout/activity_profile_menu.xml
+++ b/app/src/main/res/layout/activity_profile_menu.xml
@@ -90,7 +90,9 @@
                 android:text="user name"
                 android:textColor="@color/colorWhite"
                 android:textSize="20sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+
+                />
 
         </RelativeLayout>
     </RelativeLayout>
@@ -119,6 +121,7 @@
             android:layout_height="wrap_content"
             android:text="USER INFO."
             />
+
         </RelativeLayout>
 
         <RelativeLayout
@@ -153,6 +156,7 @@
                     android:layout_gravity="center"
                     />
             </LinearLayout>
+
             <TextView
                 android:layout_centerVertical="true"
                 android:layout_alignParentEnd="true"
@@ -161,8 +165,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="00 YEARS"
+                android:id="@+id/agevalue"
                 />
+
         </RelativeLayout>
+
         <ImageView
             android:layout_marginTop="5dp"
             android:layout_marginEnd="10dp"
@@ -213,6 +220,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:text="00 Kg"
+                android:id="@+id/startingWeight"
                 />
         </RelativeLayout>
         <ImageView
@@ -265,6 +273,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:text="00 Kg"
+                android:id="@+id/goalWeight"
                 />
         </RelativeLayout>
         <ImageView
@@ -314,6 +323,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:text="000 cm"
+                android:id="@+id/heightProfile"
                 />
         </RelativeLayout>
         <ImageView
@@ -432,6 +442,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:text="username@gmail.com"
+                android:id="@+id/EmailProfile"
                 />
         </RelativeLayout>
         <ImageView
