--- a/app/src/main/res/layout/activity_create_bdate.xml
+++ b/app/src/main/res/layout/activity_create_bdate.xml
@@ -96,18 +96,22 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
              />
+
         <EditText
-            android:inputType="date"
             android:id="@+id/bDateEditText"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
-            android:background="@drawable/enterdata"
-            android:hint="ENTER YOUR BIRTH DATE ..."
             android:layout_below="@+id/bDateImage"
             android:layout_centerInParent="true"
-            android:layout_margin="5dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginBottom="5dp"
             android:autoSizeTextType="uniform"
+            android:background="@drawable/enterdata"
             android:focusable="false"
+            android:hint="ENTER YOUR BIRTH DATE ..."
+            android:inputType="date"
             android:textAlignment="center"
             android:textColor="@color/colorPrimaryDark"
             android:textColorHint="@color/colorGray"
