--- a/app/src/main/res/layout-land/activity_main_profile.xml
+++ b/app/src/main/res/layout-land/activity_main_profile.xml
@@ -250,7 +250,7 @@
                 android:layout_marginEnd="20dp"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
-                android:id="@+id/defuserimg"
+                android:id="@+id/defuserimgprofile"
                 android:layout_width="105dp"
                 android:layout_height="105dp"
                 android:layout_centerHorizontal="true"
@@ -261,7 +261,7 @@
             <TextView
                 android:paddingBottom="15dp"
                 android:layout_centerVertical="true"
-                android:layout_toEndOf="@+id/defuserimg"
+                android:layout_toEndOf="@+id/defuserimgprofile"
                 android:layout_alignParentEnd="true"
                 android:id="@+id/usernamev"
                 android:layout_width="match_parent"
