--- a/app/src/main/res/layout-land/activity_meal_menu.xml
+++ b/app/src/main/res/layout-land/activity_meal_menu.xml
@@ -70,7 +70,7 @@
                 android:layout_centerInParent="true"
                 android:layout_marginEnd="20dp"
                 android:layout_alignParentStart="true"
-                android:id="@+id/defuserimg"
+                android:id="@+id/defuserimgprofile"
                 android:layout_width="105dp"
                 android:layout_height="105dp"
                 android:layout_centerHorizontal="true"
@@ -82,7 +82,7 @@
                 android:layout_centerInParent="true"
                 android:paddingBottom="15dp"
                 android:layout_centerVertical="true"
-                android:layout_toEndOf="@+id/defuserimg"
+                android:layout_toEndOf="@+id/defuserimgprofile"
                 android:layout_alignParentEnd="true"
                 android:id="@+id/usernamev"
                 android:layout_width="match_parent"
