--- a/app/src/main/res/layout-land/activity_setting_menu.xml
+++ b/app/src/main/res/layout-land/activity_setting_menu.xml
@@ -66,7 +66,7 @@
                 android:layout_marginEnd="20dp"
                 android:layout_marginStart="15dp"
                 android:layout_alignParentStart="true"
-                android:id="@+id/defuserimg"
+                android:id="@+id/defuserimgprofile"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:layout_centerHorizontal="true"
@@ -74,7 +74,7 @@
                 android:scaleType="centerInside"
                 android:src="@drawable/defuserimage" />
             <TextView
-                android:layout_toEndOf="@+id/defuserimg"
+                android:layout_toEndOf="@+id/defuserimgprofile"
                 android:layout_alignParentEnd="true"
                 android:id="@+id/usernamev"
                 android:layout_width="match_parent"
