--- a/app/src/main/res/layout-sw600dp/activity_cal_vegetables.xml
+++ b/app/src/main/res/layout-sw600dp/activity_cal_vegetables.xml
@@ -32,7 +32,7 @@
             android:layout_marginTop="25dp">
 
             <ImageView
-                android:id="@+id/defuserimg"
+                android:id="@+id/defuserimgprofile"
                 android:layout_width="160dp"
                 android:layout_height="160dp"
                 android:layout_alignParentStart="true"
@@ -49,7 +49,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
-                android:layout_toEndOf="@+id/defuserimg"
+                android:layout_toEndOf="@+id/defuserimgprofile"
                 android:gravity="start"
                 android:text="VEGETABLES"
                 android:textColor="@color/colorWhite"
