--- a/app/src/main/res/layout-sw600dp/activity_main_profile.xml
+++ b/app/src/main/res/layout-sw600dp/activity_main_profile.xml
@@ -243,7 +243,7 @@
             android:layout_marginTop="10dp">
 
             <ImageView
-                android:id="@+id/defuserimg"
+                android:id="@+id/defuserimgprofile"
                 android:layout_width="105dp"
                 android:layout_height="105dp"
                 android:layout_alignParentStart="true"
@@ -260,7 +260,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
-                android:layout_toEndOf="@+id/defuserimg"
+                android:layout_toEndOf="@+id/defuserimgprofile"
                 android:gravity="start"
                 android:paddingBottom="15dp"
                 android:text="user name"
