--- a/app/src/main/res/layout-sw600dp/activity_setting_menu.xml
+++ b/app/src/main/res/layout-sw600dp/activity_setting_menu.xml
@@ -64,7 +64,7 @@
             android:layout_marginTop="20dp">
 
             <ImageView
-                android:id="@+id/defuserimg"
+                android:id="@+id/defuserimgprofile"
                 android:layout_width="155dp"
                 android:layout_height="155dp"
                 android:layout_alignParentStart="true"
@@ -82,7 +82,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
-                android:layout_toEndOf="@+id/defuserimg"
+                android:layout_toEndOf="@+id/defuserimgprofile"
                 android:gravity="start"
                 android:text="user name"
                 android:textColor="@color/colorWhite"
