--- a/app/src/main/res/layout/activity_admin_user.xml
+++ b/app/src/main/res/layout/activity_admin_user.xml
@@ -13,6 +13,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -61,7 +62,7 @@
                 android:textSize="25dp"
                 android:padding="20dp"
                 android:drawablePadding="20dp"
-                android:id="@+id/username_admin"
+                android:id="@+id/username_admin_user"
                 />
         </LinearLayout>
     </LinearLayout>
@@ -79,10 +80,4 @@
         android:layout_marginTop="10dp"
         android:id="@+id/middle_text"/>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/middle_text"
-        android:id="@+id/users_rv"
-        />
 </androidx.constraintlayout.widget.ConstraintLayout>
