--- a/app/src/main/res/layout/activity_edit_prof_setting.xml
+++ b/app/src/main/res/layout/activity_edit_prof_setting.xml
@@ -70,7 +70,7 @@
                 android:layout_marginEnd="20dp"
                 android:layout_marginStart="15dp"
                 android:layout_alignParentStart="true"
-                android:id="@+id/defuserimg"
+                android:id="@+id/defuserimgprofile"
                 android:layout_width="105dp"
                 android:layout_height="105dp"
                 android:layout_centerHorizontal="true"
@@ -80,7 +80,7 @@
 
             <TextView
                 android:layout_centerVertical="true"
-                android:layout_toEndOf="@+id/defuserimg"
+                android:layout_toEndOf="@+id/defuserimgprofile"
                 android:layout_alignParentEnd="true"
                 android:id="@+id/usernamevSettings"
                 android:layout_width="match_parent"
