--- a/app/src/main/res/layout/activity_main_admin.xml
+++ b/app/src/main/res/layout/activity_main_admin.xml
@@ -1,178 +1,180 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Admin.MainAdminActivity"
-    android:background="#f6f6f6">
+    android:background="#f6f6f6"
+    tools:context=".Admin.MainAdminActivity">
 
     <ImageView
+        android:id="@+id/background_img"
         android:layout_width="match_parent"
         android:layout_height="170dp"
-        android:background="@drawable/train_background"
-        android:id="@+id/background_img"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintTop_toTopOf="parent"
-    app:layout_constraintBottom_toBottomOf="parent"
-    android:orientation="vertical"
-    app:layout_constraintVertical_bias="0.05"
-    android:layout_margin="10dp"
-    android:id="@+id/upper_linear">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="15dp"
-        >
-        <ImageView
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:src="@drawable/profile_icon"/>
-        <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="PROFILE"
-        android:gravity="center"
-        android:textStyle="bold"
-        android:textSize="25dp"
-        />
+        android:background="@drawable/train_background" />
 
-    </LinearLayout>
-    <LinearLayout
+    <RelativeLayout
+        android:id="@+id/upper_linear"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-    <ImageView
-        android:layout_width="90dp"
-        android:layout_height="90dp"
-        android:src="@drawable/profile_pic"
-        android:id="@+id/admin_prfoile_pic"/>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Admin"
-        android:gravity="center"
-        android:textStyle="bold"
-        android:textSize="25dp"
-        android:padding="20dp"
-        android:drawablePadding="20dp"
-        />
-    </LinearLayout>
-</LinearLayout>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/upper_linear"
-        android:text="management of membership"
-        android:textColor="#7c7e82"
-        android:textAllCaps="true"
-        android:textStyle="bold"
-        android:textSize="16dp"
-        android:background="#e9e9e9"
-        android:paddingLeft="20dp"
-        android:layout_marginTop="10dp"
-        android:id="@+id/middle_text"/>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_margin="20dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/middle_text"
+        android:layout_height="180dp"
         android:orientation="vertical"
-        >
+        tools:layout_editor_absoluteX="10dp">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/add_membership_click"
+            android:layout_marginBottom="15dp">
 
+            <ImageView
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:src="@drawable/profile_icon" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="PROFILE"
+                android:textSize="25dp"
+                android:textStyle="bold" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
             >
+
+            <ImageView
+                android:id="@+id/admin_prfoile_pic"
+                android:layout_width="90dp"
+                android:layout_height="90dp"
+                android:src="@drawable/profile_pic" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:drawablePadding="20dp"
+                android:gravity="center"
+                android:padding="20dp"
+                android:text="Admin"
+                android:textSize="25dp"
+                android:textStyle="bold" />
+        </LinearLayout>
+    </RelativeLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        tools:layout_editor_absoluteX="20dp"
+        android:layout_below="@+id/middle_text"
+
+        >
+
+        <LinearLayout
+            android:id="@+id/add_membership_click"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            >
+
             <ImageView
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:src="@drawable/add_member"
-                />
+                android:src="@drawable/add_member" />
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:paddingLeft="10dp"
                 android:text="Add Membership"
                 android:textColor="#000"
-                android:textSize="16dp"
-                android:layout_gravity="center"
-                android:paddingLeft="10dp"
-                />
+                android:textSize="16dp" />
+
 
         </LinearLayout>
-
         <View
             android:layout_width="fill_parent"
             android:layout_height="0.5dp"
-            android:background="#8A8989"
             android:layout_marginTop="5dp"
-            android:layout_marginBottom="20dp"/>
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginBottom="20dp"
+            android:background="#8A8989" />
 
         <LinearLayout
+            android:id="@+id/update_membership_click"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/update_membership_click"
-            >
+            android:layout_margin="20dp">
+
             <ImageView
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:src="@drawable/update_member"
-                />
+                android:src="@drawable/update_member" />
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:paddingLeft="10dp"
                 android:text="Update Membership"
                 android:textColor="#000"
-                android:textSize="16dp"
-                android:layout_gravity="center"
-                android:paddingLeft="10dp"
-                />
+                android:textSize="16dp" />
         </LinearLayout>
-
-
         <View
             android:layout_width="fill_parent"
             android:layout_height="0.5dp"
-            android:background="#8A8989"
             android:layout_marginTop="5dp"
-            android:layout_marginBottom="20dp"/>
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginBottom="20dp"
+            android:background="#8A8989" />
         <LinearLayout
+            android:id="@+id/delete_membership_click"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/delete_membership_click"
-            >
+            android:layout_margin="20dp">
+
             <ImageView
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:src="@drawable/delete_member"
-                />
+                android:src="@drawable/delete_member" />
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Delete Membership"
-                android:textColor="#000"
-                android:textSize="16dp"
                 android:layout_gravity="center"
                 android:paddingLeft="10dp"
-                />
+                android:text="Delete Membership"
+                android:textColor="#000"
+                android:textSize="16dp" />
         </LinearLayout>
-
-
         <View
             android:layout_width="fill_parent"
             android:layout_height="0.5dp"
-            android:background="#8A8989"
-            android:layout_marginTop="5dp"/>
+            android:layout_marginTop="5dp"
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginBottom="20dp"
+            android:background="#8A8989" />
+
     </LinearLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:id="@+id/middle_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#e9e9e9"
+        android:paddingLeft="20dp"
+        android:text="management of membership"
+        android:textAllCaps="true"
+        android:textColor="#7c7e82"
+        android:textSize="16dp"
+        android:textStyle="bold"
+        android:layout_below="@+id/upper_linear"
+        app:layout_constraintVertical_bias="0.4" />
+
+
+
+</RelativeLayout>
