--- a/app/src/main/res/layout/activity_main_profile.xml
+++ b/app/src/main/res/layout/activity_main_profile.xml
@@ -47,15 +47,13 @@
                     android:layout_height="wrap_content"
                     >
 
-                    <ImageView
+                    <de.hdodenhof.circleimageview.CircleImageView
                         android:layout_marginEnd="5dp"
                         android:layout_marginStart="5dp"
                         android:id="@+id/menudefuserimg"
                         android:layout_width="90dp"
                         android:layout_height="90dp"
                         android:layout_alignParentStart="true"
-                        android:background="@android:color/transparent"
-                        android:scaleType="centerInside"
                         android:src="@drawable/createimage" />
 
                     <TextView
@@ -246,22 +244,31 @@
             android:layout_height="wrap_content"
             >
 
-            <ImageView
+<!--            <ImageView-->
+<!--                android:layout_marginEnd="20dp"-->
+<!--                android:layout_alignParentStart="true"-->
+<!--                android:layout_alignParentTop="true"-->
+<!--                android:id="@+id/defuserimg"-->
+<!--                android:layout_width="105dp"-->
+<!--                android:layout_height="105dp"-->
+<!--                android:layout_centerHorizontal="true"-->
+<!--                android:background="@android:color/transparent"-->
+<!--                android:scaleType="centerInside"-->
+<!--                android:src="@drawable/defuserimage" />-->
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:layout_width="105dp"
+                android:layout_height="105dp"
                 android:layout_marginEnd="20dp"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
-                android:id="@+id/defuserimg"
-                android:layout_width="105dp"
-                android:layout_height="105dp"
+                android:id="@+id/defuserimgprofile"
                 android:layout_centerHorizontal="true"
-                android:background="@android:color/transparent"
-                android:scaleType="centerInside"
-                android:src="@drawable/defuserimage" />
-
+                android:src="@drawable/defuserimage"
+                />
             <TextView
                 android:paddingBottom="15dp"
                 android:layout_centerVertical="true"
-                android:layout_toEndOf="@+id/defuserimg"
+                android:layout_toEndOf="@+id/defuserimgprofile"
                 android:layout_alignParentEnd="true"
                 android:id="@+id/usernamev"
                 android:layout_width="match_parent"
