--- a/app/src/main/res/layout/activity_profile_menu.xml
+++ b/app/src/main/res/layout/activity_profile_menu.xml
@@ -66,22 +66,20 @@
             android:layout_height="wrap_content"
             >
 
-            <ImageView
+            <de.hdodenhof.circleimageview.CircleImageView
                 android:layout_alignParentBottom="true"
                 android:layout_marginEnd="20dp"
                 android:layout_marginStart="15dp"
                 android:layout_alignParentStart="true"
-                android:id="@+id/defuserimg"
+                android:id="@+id/defuserimgprofile"
                 android:layout_width="105dp"
                 android:layout_height="105dp"
                 android:layout_centerHorizontal="true"
-                android:background="@android:color/transparent"
-                android:scaleType="centerInside"
                 android:src="@drawable/defuserimage" />
 
             <TextView
                 android:layout_centerVertical="true"
-                android:layout_toEndOf="@+id/defuserimg"
+                android:layout_toEndOf="@+id/defuserimgprofile"
                 android:layout_alignParentEnd="true"
                 android:id="@+id/usernamev"
                 android:layout_width="match_parent"
