--- a/app/src/main/res/layout/activity_profile_menu.xml
+++ b/app/src/main/res/layout/activity_profile_menu.xml
@@ -271,7 +271,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:text="00 Kg"
-                android:id="@+id/goalWeight"
+                android:id="@+id/goalWeightmenu"
                 />
         </RelativeLayout>
         <ImageView
