--- a/app/src/main/res/layout/activity_admin_user.xml
+++ b/app/src/main/res/layout/activity_admin_user.xml
@@ -50,7 +50,6 @@
             <ImageView
                 android:layout_width="90dp"
                 android:layout_height="90dp"
-                android:src="@drawable/profile_pic"
                 android:id="@+id/admin_prfoile_pic"/>
 
             <TextView
@@ -65,6 +64,7 @@
                 android:id="@+id/username_admin_user"
                 />
         </LinearLayout>
+
     </LinearLayout>
     <TextView
         android:layout_width="match_parent"
@@ -80,4 +80,34 @@
         android:layout_marginTop="10dp"
         android:id="@+id/middle_text"/>
 
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        app:layout_constraintTop_toBottomOf="@id/middle_text"
+        android:id="@+id/date_picker"
+        android:layout_margin="20dp"
+        android:background="@drawable/dialoge_shape"
+        android:hint="End Date: DD/MM/YYYY"
+        android:textColorHint="#000"
+        android:textAlignment="center"
+        android:focusable="false"
+        android:textColor="#000"
+        />
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_margin="40dp"
+        android:id="@+id/add_membership_btn"
+        android:background="@drawable/btn_shape"
+        app:layout_constraintTop_toBottomOf="@id/date_picker"
+        android:text="Add Membership"/>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_margin="40dp"
+        android:id="@+id/delete_membership_btn"
+        android:background="#FF5722"
+        app:layout_constraintTop_toBottomOf="@id/add_membership_btn"
+        android:text="Delete Membership"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
