--- a/app/src/main/res/layout/activity_main_admin.xml
+++ b/app/src/main/res/layout/activity_main_admin.xml
@@ -104,33 +104,33 @@
             android:layout_marginBottom="20dp"
             android:background="#8A8989" />
 
-        <LinearLayout
-            android:id="@+id/update_membership_click"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="20dp">
+<!--        <LinearLayout-->
+<!--            android:id="@+id/update_membership_click"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_margin="20dp">-->
 
-            <ImageView
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:src="@drawable/update_member" />
+<!--            <ImageView-->
+<!--                android:layout_width="30dp"-->
+<!--                android:layout_height="30dp"-->
+<!--                android:src="@drawable/update_member" />-->
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:paddingLeft="10dp"
-                android:text="Update Membership"
-                android:textColor="#000"
-                android:textSize="16dp" />
-        </LinearLayout>
-        <View
-            android:layout_width="fill_parent"
-            android:layout_height="0.5dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginHorizontal="20dp"
-            android:layout_marginBottom="20dp"
-            android:background="#8A8989" />
+<!--            <TextView-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_gravity="center"-->
+<!--                android:paddingLeft="10dp"-->
+<!--                android:text="Update Membership"-->
+<!--                android:textColor="#000"-->
+<!--                android:textSize="16dp" />-->
+<!--        </LinearLayout>-->
+<!--        <View-->
+<!--            android:layout_width="fill_parent"-->
+<!--            android:layout_height="0.5dp"-->
+<!--            android:layout_marginTop="5dp"-->
+<!--            android:layout_marginHorizontal="20dp"-->
+<!--            android:layout_marginBottom="20dp"-->
+<!--            android:background="#8A8989" />-->
         <LinearLayout
             android:id="@+id/delete_membership_click"
             android:layout_width="match_parent"
