--- a/app/src/main/res/layout/activity_plan_a_home.xml
+++ b/app/src/main/res/layout/activity_plan_a_home.xml
@@ -29,7 +29,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="INTERMEDIATE - PLAN A"
+        android:text="INTERMEDIATE"
         android:layout_toRightOf="@+id/profile_pic_intermediate_plana"
         android:layout_marginTop="100dp"
         android:layout_marginLeft="10dp"
