--- a/app/src/main/res/layout/activity_meal_menu.xml
+++ b/app/src/main/res/layout/activity_meal_menu.xml
@@ -76,7 +76,7 @@
                 android:layout_centerHorizontal="true"
                 android:background="@android:color/transparent"
                 android:scaleType="centerInside"
-                android:src="@drawable/defuserimage" />
+                 />
 
             <TextView
                 android:layout_centerInParent="true"
@@ -143,7 +143,7 @@
                 <TextView
                     android:layout_alignParentTop="true"
                     android:textColor="@color/colorBlack"
-                    android:id="@+id/energyvalue"
+                    android:id="@+id/energymealvalue"
                     android:layout_centerHorizontal="true"
                     android:gravity="center"
                     android:layout_width="wrap_content"
@@ -156,7 +156,7 @@
                     android:layout_marginTop="5dp"
                     android:textColor="@color/colorBlack"
                     android:layout_centerHorizontal="true"
-                    android:layout_below="@+id/energyvalue"
+                    android:layout_below="@+id/energymealvalue"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Kcal"
@@ -186,10 +186,10 @@
                     android:layout_alignParentTop="true"
                     android:textColor="@color/colorBlack"
                     android:layout_centerHorizontal="true"
-                    android:id="@+id/startweightvalue"
+                    android:id="@+id/proteincal"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="0 g"
+                    android:text="0"
                     android:textAlignment="center"
                     android:textSize="15sp"
                     android:textStyle="bold" />
@@ -197,12 +197,12 @@
                     android:layout_marginTop="5dp"
                     android:textColor="@color/colorBlack"
                     android:layout_centerHorizontal="true"
-                    android:layout_below="@+id/startweightvalue"
+                    android:layout_below="@+id/proteincal"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Protein"
+                    android:text="Kcl\nProteins"
                     android:textAlignment="center"
-                    android:textSize="15sp"
+                    android:textSize="10sp"
                     android:textStyle="bold" />
             </RelativeLayout>
             <ImageView
@@ -226,11 +226,11 @@
                 <TextView
                     android:layout_alignParentTop="true"
                     android:textColor="@color/colorBlack"
-                    android:id="@+id/goalweightvalue"
+                    android:id="@+id/carbcal"
                     android:layout_centerHorizontal="true"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="0 g"
+                    android:text="0"
                     android:textAlignment="center"
                     android:textSize="15sp"
                     android:textStyle="bold" />
@@ -238,12 +238,12 @@
                     android:layout_marginTop="5dp"
                     android:textColor="@color/colorBlack"
                     android:layout_centerHorizontal="true"
-                    android:layout_below="@+id/goalweightvalue"
+                    android:layout_below="@+id/carbcal"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Carb"
+                    android:text="kcal\nCarbs"
                     android:textAlignment="center"
-                    android:textSize="15sp"
+                    android:textSize="10sp"
                     android:textStyle="bold" />
             </RelativeLayout>
             <ImageView
@@ -266,10 +266,10 @@
                 >
                 <TextView
                     android:textColor="@color/colorBlack"
-                    android:id="@+id/changeweightvalue"
+                    android:id="@+id/fatscal"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="0 g"
+                    android:text="0"
                     android:layout_centerHorizontal="true"
                     android:textAlignment="center"
                     android:textSize="15sp"
@@ -279,12 +279,12 @@
                     android:layout_marginTop="5dp"
                     android:textColor="@color/colorBlack"
                     android:layout_centerHorizontal="true"
-                    android:layout_below="@+id/changeweightvalue"
+                    android:layout_below="@+id/fatscal"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Fats"
+                    android:text="Kcl\nFats"
                     android:textAlignment="center"
-                    android:textSize="15sp"
+                    android:textSize="10sp"
                     android:textStyle="bold" />
             </RelativeLayout>
         </GridLayout>
@@ -394,5 +394,4 @@
 
 
     </RelativeLayout>
-
 </RelativeLayout>
