--- a/app/src/main/res/layout/activity_setting_menu.xml
+++ b/app/src/main/res/layout/activity_setting_menu.xml
@@ -78,10 +78,10 @@
                 android:layout_marginEnd="20dp"
                 android:background="@android:color/transparent"
                 android:scaleType="centerInside"
-                android:src="@drawable/defuserimage" />
+                 />
 
             <TextView
-                android:id="@+id/usernamev"
+                android:id="@+id/usernamevSett"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
